// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Button disabled while loading 1`] = `
<button
  className="fs-btn fs-btn--before"
  data-test="Button"
  disabled={true}
>
  <Icon
    name="refresh"
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button returns null 1`] = `
<button
  className="fs-btn"
  data-test="Button"
>
  <Icon
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with only icon in size xl 1`] = `
<button
  className="fs-btn"
  data-test="Button"
>
  <Icon
    name="refresh"
    size="xl"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with spinning icon while loading 1`] = `
<button
  className="fs-btn fs-btn--after"
  data-test="Button"
  disabled={true}
>
  <Icon
    name="refresh"
    size="s"
    spin={true}
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with text left and icon right 1`] = `
<button
  className="fs-btn fs-btn--after"
  data-test="Button"
>
  <Icon
    name="refresh"
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with text right and icon left 1`] = `
<button
  className="fs-btn fs-btn--before"
  data-test="Button"
>
  <Icon
    name="refresh"
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;
